syntax = "proto3";

package appointment;

service AppointmentService {
  rpc FindAll (Empty) returns (AppointmentList) {}
  rpc FindOne (AppointmentId) returns (Appointment) {}
  rpc Create (AppointmentCreateRequest) returns (Appointment) {}
  rpc Update (AppointmentUpdateRequest) returns (Appointment) {}
  rpc Remove (AppointmentId) returns (Empty) {}
  rpc FindByCustomer (CustomerId) returns (AppointmentList) {}
  rpc FindByStaff (StaffId) returns (AppointmentList) {}
  rpc FindByDateRange (DateRange) returns (AppointmentList) {}
  rpc FindByStatus (AppointmentStatus) returns (AppointmentList) {}
  rpc GetUpcomingAppointments (Days) returns (AppointmentList) {}
}

message Empty {}

message AppointmentId {
  int32 id = 1;
}

message CustomerId {
  int32 id = 1;
}

message StaffId {
  int32 id = 1;
}

message DateRange {
  string startDate = 1;
  string endDate = 2;
}

message Days {
  int32 days = 1;
}

message AppointmentStatus {
  string status = 1;
}

message Appointment {
  int32 id = 1;
  int32 customerId = 2;
  int32 assignedStaffId = 3;
  int32 projectId = 4;
  string scheduledTime = 5;
  string status = 6;
  string notes = 7;
  string createdAt = 8;
  string updatedAt = 9;
  Customer customer = 10;
  Staff assignedStaff = 11;
}

message Staff {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string role = 5;
}

message Customer {
  int32 id = 1;
  string name = 2;
  string gender = 3;
  int32 age = 4;
  string phone = 5;
  string email = 6;
}

message AppointmentCreateRequest {
  int32 customerId = 1;
  int32 assignedStaffId = 2;
  int32 projectId = 3;
  string scheduledTime = 4;
  string status = 5;
  string notes = 6;
}

message AppointmentUpdateRequest {
  int32 id = 1;
  AppointmentCreateRequest appointment = 2;
}

message AppointmentList {
  repeated Appointment appointments = 1;
}