syntax = "proto3";

package membership;

service MembershipService {
  rpc FindAll (Empty) returns (MembershipList) {}
  rpc FindOne (MembershipId) returns (Membership) {}
  rpc Create (MembershipCreateRequest) returns (Membership) {}
  rpc Update (MembershipUpdateRequest) returns (Membership) {}
  rpc Remove (MembershipId) returns (Empty) {}
  rpc FindByCustomer (CustomerId) returns (Membership) {}
  rpc FindByLevel (MembershipLevel) returns (MembershipList) {}
  rpc AddPoints (PointsRequest) returns (Membership) {}
  rpc DeductPoints (PointsRequest) returns (Membership) {}
  rpc AddBalance (BalanceRequest) returns (Membership) {}
  rpc DeductBalance (BalanceRequest) returns (Membership) {}
}

message Empty {}

message MembershipId {
  int32 id = 1;
}

message CustomerId {
  int32 id = 1;
}

message MembershipLevel {
  string level = 1;
}

message PointsRequest {
  int32 id = 1;
  int32 points = 2;
}

message BalanceRequest {
  int32 id = 1;
  double amount = 2;
}

message Membership {
  int32 id = 1;
  int32 customerId = 2;
  string level = 3;
  int32 points = 4;
  double balance = 5;
  string expiryDate = 6;
  bool isActive = 7;
  string createdAt = 8;
  string updatedAt = 9;
  repeated Customer customers = 10;
}

message Customer {
  int32 id = 1;
  string name = 2;
  string gender = 3;
  int32 age = 4;
  string phone = 5;
  string email = 6;
}

message MembershipCreateRequest {
  int32 customerId = 1;
  string level = 2;
  int32 points = 3;
  double balance = 4;
  string expiryDate = 5;
  bool isActive = 6;
}

message MembershipUpdateRequest {
  int32 id = 1;
  MembershipCreateRequest membership = 2;
}

message MembershipList {
  repeated Membership memberships = 1;
}